refactor: add encrypt/decrypt with key and iv args